--- a/src/dissertation_gui/main_window.ui
+++ b/src/dissertation_gui/main_window.ui
@@ -82,12 +82,30 @@
       <property name="geometry">
        <rect>
         <x>130</x>
-        <y>70</y>
+        <y>90</y>
         <width>551</width>
-        <height>361</height>
+        <height>341</height>
        </rect>
       </property>
      </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>320</x>
+        <y>70</y>
+        <width>161</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Градуирочная характеристика</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab">
+     <attribute name="title">
+      <string>Параметры ТРМ</string>
+     </attribute>
     </widget>
    </widget>
   </widget>
@@ -103,7 +121,7 @@
   <customwidget>
    <class>SensorsComboBox</class>
    <extends>QComboBox</extends>
-   <header>dissertation_gui.example.h</header>
+   <header>dissertation_gui.widgets.combo_boxes.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
