--- a/src/dissertation_gui/main_window.ui
+++ b/src/dissertation_gui/main_window.ui
@@ -33,10 +33,10 @@
      <widget class="PlotWidget" name="graph" native="true">
       <property name="geometry">
        <rect>
-        <x>50</x>
+        <x>10</x>
         <y>10</y>
-        <width>701</width>
-        <height>371</height>
+        <width>771</width>
+        <height>421</height>
        </rect>
       </property>
      </widget>
@@ -87,18 +87,27 @@
         <height>351</height>
        </rect>
       </property>
+      <property name="sizeAdjustPolicy">
+       <enum>QAbstractScrollArea::AdjustIgnored</enum>
+      </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
      </widget>
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>260</x>
+        <x>0</x>
         <y>60</y>
-        <width>301</width>
+        <width>791</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
        <string>Градуировочная характеристика</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </widget>
