--- a/src/dissertation_gui/main_window.ui
+++ b/src/dissertation_gui/main_window.ui
@@ -18,13 +18,13 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>0</y>
+      <y>-1</y>
       <width>800</width>
-      <height>460</height>
+      <height>461</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
@@ -219,6 +219,16 @@
      <attribute name="title">
       <string>Страница</string>
      </attribute>
+     <widget class="PlotWidget" name="trm_plot" native="true">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>791</width>
+        <height>431</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
