--- a/src/dissertation_gui/main_window.ui
+++ b/src/dissertation_gui/main_window.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
@@ -352,8 +352,8 @@
      <widget class="QLabel" name="label_8">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>70</y>
+        <x>30</x>
+        <y>20</y>
         <width>201</width>
         <height>21</height>
        </rect>
@@ -365,8 +365,8 @@
      <widget class="QLabel" name="label_9">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>120</y>
+        <x>30</x>
+        <y>80</y>
         <width>201</width>
         <height>21</height>
        </rect>
@@ -378,8 +378,8 @@
      <widget class="QSpinBox" name="uas_min_temp">
       <property name="geometry">
        <rect>
-        <x>380</x>
-        <y>110</y>
+        <x>230</x>
+        <y>70</y>
         <width>101</width>
         <height>41</height>
        </rect>
@@ -388,11 +388,34 @@
      <widget class="QSpinBox" name="uas_max_temp">
       <property name="geometry">
        <rect>
-        <x>380</x>
-        <y>60</y>
+        <x>230</x>
+        <y>10</y>
         <width>101</width>
         <height>41</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="SensorsComboBox" name="sensors_combo_box_2">
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>50</y>
+        <width>241</width>
+        <height>51</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_6">
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>10</y>
+        <width>241</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Выбор датчика для симуляции</string>
       </property>
      </widget>
     </widget>
